--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           OUTPUT_ROOT: ${{ github.workspace }}/output
           BUILD_DIR: ${{ github.workspace }}/build
-          NDK_ROOT_PREFIX: $ANDROID_HOME/ndk
+          NDK_ROOT_PREFIX: ${{ env.ANDROID_HOME }}/ndk
         run: |
           ./build_ssl.sh
 
